tests/NormalTests/paczka1/small_fuzzy/98439108.err
Error in line 6: RoRZYg A960 58,3
Error in line 3: S708 S708 66,9
Error in line 11: DjOZVtg A550 67,4
